--- a/views/hospital_view.xml
+++ b/views/hospital_view.xml
@@ -36,13 +36,16 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">sis.hospital</field>
         <field name="view_mode">tree,form</field>
-        <!-- <field name="help" type="html">
-            <p class="oe_view_nocontent_create"> -->
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
                 <!-- Add Text Here -->
-            <!-- </p><p> -->
+                ¡Su gestión de hospitales están vacío!
+            </p>
+            <p>
                 <!-- More details about what a user can do with this object will be OK -->
-            <!-- </p>
-        </field> -->
+                Cree su primer registro de hospital, ¡Ahora!
+            </p>
+        </field>
     </record>
 
     <!-- hospital menu -->
