--- a/views/especialidades_view.xml
+++ b/views/especialidades_view.xml
@@ -34,13 +34,14 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">sis.especialidades</field>
         <field name="view_mode">tree,form</field>
-        <!-- <field name="help" type="html">
-            <p class="oe_view_nocontent_create"> -->
-                <!-- Add Text Here -->
-            <!-- </p><p> -->
-                <!-- More details about what a user can do with this object will be OK -->
-            <!-- </p>
-        </field> -->
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
+                ¡Su gestión de especialidades médicas están vacío!
+            </p>
+            <p>
+                Cree su primer registro de especialidades médicas, ¡Ahora!
+            </p>
+        </field>
     </record>
 
     <!-- especialidades menu -->
