--- a/views/especialidades_view.xml
+++ b/views/especialidades_view.xml
@@ -35,11 +35,11 @@
         <field name="res_model">sis.especialidades</field>
         <field name="view_mode">tree,form</field>
         <field name="help" type="html">
-            <p class="oe_view_nocontent_create">
-                ¡Su gestión de especialidades médicas están vacío!
+            <p class="o_view_nocontent_smiling_face">
+                ¡Cree una especialidad médica!
             </p>
             <p>
-                Cree su primer registro de especialidades médicas, ¡Ahora!
+                Cree una especialidad médica asociada a un hospital, para catalogar los servicios ofrecidos en el hospital.
             </p>
         </field>
     </record>
