--- a/views/hospital_view.xml
+++ b/views/hospital_view.xml
@@ -37,13 +37,13 @@
         <field name="res_model">sis.hospital</field>
         <field name="view_mode">tree,form</field>
         <field name="help" type="html">
-            <p class="oe_view_nocontent_create">
+            <p class="o_view_nocontent_smiling_face">
                 <!-- Add Text Here -->
-                ¡Su gestión de hospitales están vacío!
+                ¡Cree un hospital!
             </p>
             <p>
                 <!-- More details about what a user can do with this object will be OK -->
-                Cree su primer registro de hospital, ¡Ahora!
+                Crear un hospital y asocie el país donde esta el mismo, para mantener el rastro de todas las operaciones internas.
             </p>
         </field>
     </record>
