--- a/views/partner_view.xml
+++ b/views/partner_view.xml
@@ -12,8 +12,8 @@
             <xpath expr="//field[@name='website']" position="after">
                 <!-- Add your fields or attributes here -->
                 <field name="rut" string="Rut:" placeholder="00000000-0" />
-                <field name="edad" string="Edad:" placeholder="45" />
-                <field name="profesion" string="Profesion:" placeholder="Ing. Civil" />
+                <field name="age" string="Age:" placeholder="45" />
+                <field name="profession" string="Profession:" placeholder="Civil Engineer" />
             </xpath>
 
             </field>
